[package]
name = "surreal-derive"
version = "0.1.0"
edition = "2021"
authors = ["Franklin E. Blanco"]
description = "Derive macros for SurrealDB Rust client"
license = "MIT"
readme = "README.md"
repository = "https://github.com/franklinblanco/surreal-derive"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.103"
quote = "1.0"
proc-macro2 = "1.0"